[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.6"
clap = { version = "4.3", features = ["derive"] }
protocol_types = { path = "../protocol/protocol_types" }
protocol_data_types = { path = "../protocol/protocol_data_types" }
serde_json = "1.0.96"
onefetch-image = "2.17.1"
image = "0.24.6"
surf = "2.3.2"
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
base64 = "0.21.1"
log = "0.4.17"
