[package]
name = "yaab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
bevy_vox = { git = "https://github.com/Xenira/bevy_vox" }
# bevy_vox = { path = "../../bevy_vox" }
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"