[package]
name = "space_3"
version = "0.1.0"
edition = "2021"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"]}
bevy_egui = "0.20"

# bevy_vox = { path = "../../bevy_vox" }
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
# dialog = "0.3"
protocol = { path = "../protocol" }
async-channel = "1.6.1"
chrono = "0.4"

[target.wasm32-unknown-unknown.dependencies]
surf = { version = "2.3", default-features = false, features = ["wasm-client", "middleware-logger", "encoding"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
surf = { version = "2.3", default-features = false, features = ["curl-client", "middleware-logger", "encoding"] }
dotenv = "0.15.0"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
