[package]
name = "space_3"
version = "0.1.0"
edition = "2021"
proc-macro = true
build = "build.rs"
authors = ["Xenira"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_egui = "0.20"

# bevy_vox = { path = "../../bevy_vox" }
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
# dialog = "0.3"
protocol = { path = "../protocol" }
async-channel = "1.6.1"
chrono = "0.4"
bitflags = "2.3.1"
reqwest = { version = "0.11.18", features = ["serde_json", "json", "blocking"] }
tokio = { version = "1.28.2", features = ["rt"] }

[target.wasm32-unknown-unknown.dependencies]
web-sys = { version = "0.3.63", features = ["Window", "Document"] }
wasm-bindgen-futures = "0.4.37"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dotenv = "0.15.0"

[build-dependencies]
fs_extra = "1.3.0"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"