[package]
name = "protocol"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features=["derive"]}
chrono = {version="0.4", features=["serde"]}
enum-iterator = "1.4"
protocol_types = {path="protocol_types"}

[build-dependencies]
protocol_types = {path="protocol_types"}
serde_json = "1.0"
serde = {version="1.0", features=["derive"]}