[package]
name = "protocol"
version = "0.1.0"
authors = ["Xenira"]
license = "GPL-3.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features=["derive"]}
chrono = {version="0.4", features=["serde"]}
enum-iterator = "1.4"
protocol_types = {path="protocol_types"}
uuid = { version = "1.3.1", features = ["v4", "serde"] }

[build-dependencies]
protocol_types = {path="protocol_types"}
protocol_data_types = {path="protocol_data_types"}
serde_json = "1.0"
serde = {version="1.0", features=["derive"]}
image = "0.24"
quote = "1.0.28"
prettyplease = "0.2.12"
syn = "2.0.18"
