[package]
name = "rog-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
diesel = { version = "2.0", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.0"
dotenv = "0.15.0"
chrono = "0.4"
uuid = { version = "1.3.1", features = ["v4"] }
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
protocol = { path = "../protocol" }
async-std = "1.12"
async-channel = "1.8"
static_init = "1"
rand = "0.8"
futures = "0.3"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.3"
features = ["diesel_postgres_pool"]

[target.'cfg(target_os = "linux")']
rustflags = ["-C link-arg=pthread"]
