[package]
name = "protocol_data_types"
version = "0.1.0"
edition = "2021"
authors = ["Xenira"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
protocol_types = { path = "../protocol_types" }
quote = "1.0.28"
